--- a/src/style.css
+++ b/src/style.css
@@ -34,10 +34,9 @@ body {
 }
 
 body {
-  font-family: "Silkscreen", sans-serif;
-  background: url("./images/background.jpg");
+  background: url("./images/background.jpg") no-repeat center fixed;
   background-size: cover;
-  background-repeat: no-repeat;
+  font-family: "Silkscreen", sans-serif;
   /* Disable scroll */
   overflow: hidden;
 }
