--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -9,7 +9,7 @@ header {
   height: 10%;
   width: 100%;
   text-align: center;
-  background: var(--background);
+  background-color: var(--background);
   z-index: 999;
 }
 
@@ -70,7 +70,7 @@ nav {
   position: absolute;
   top: 100%;
   left: 0;
-  background: var(--background);
+  background-color: var(--background);
   width: 100%;
   text-align: left;
   transform-origin: top;
