--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,16 +1,3 @@
-:root {
-  --border-background: rgb(139, 139, 139);
-  --border-color-dark: rgb(55, 55, 55);
-  --border-color-light: rgb(255, 255, 255);
-}
-
-#content {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  overflow-y: auto;
-}
-
 /* Header uses the 10% of the height so the
 container uses the remaining height which is 90%
 */
@@ -27,7 +14,7 @@ container uses the remaining height which is 90%
 .food {
   display: flex;
   color: white;
-  background-color: var(--border-background);
+  background-color: var(--background);
   box-shadow: 5px 5px 10px black;
   border-radius: 10px;
   padding: 10px;
@@ -38,7 +25,7 @@ container uses the remaining height which is 90%
   height: 110px;
   margin-right: 20px;
   padding: 8px;
-  background-color: var(--border-background);
+  background-color: var(--background);
   border: 6px solid;
   border-top-color: var(--border-color-dark);
   border-left-color: var(--border-color-dark);
