--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,7 +1,11 @@
 .about-container {
-  align-self: center;
+  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
   color: white;
   width: 50%;
+  height: 90%;
+  justify-content: center;
 }
 
 .about-title,
@@ -23,4 +27,5 @@
   line-height: 1.6;
   font-size: 1.5em;
   box-shadow: 2px 2px 10px black;
+  overflow: auto;
 }
