--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,6 +1,7 @@
 .contact-container {
   color: white;
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
   justify-content: center;
